fix(ui): add flex wrap to hand

--- a/src/styles/base.sass
+++ b/src/styles/base.sass
@@ -30,3 +30,7 @@ body
 .mj-dora-list
   @include media('<tablet')
     grid-column: 1 / -1
+
+.mj-hand
+  justify-content: space-between
+  flex-wrap: wrap
